cluster/apps/mokuro-bunko/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "mokuro-bunko"
  namespace: "mokuro-bunko"
spec:
  type: "ClusterIP"
  selector:
    name: "mokuro-bunko"
  ports:
    - port: 8080
      targetPort: 8080
      protocol: "TCP"
      name: "mokuro-bunko"
