cluster/apps/mokuro-bunko/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mokuro-bunko
  namespace: mokuro-bunko
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: mokuro-bunko-tls
      hosts:
        - bunko.${EXTERNAL_DOMAIN}
  rules:
    - host: bunko.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mokuro-bunko
                port:
                  number: 8080
